--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Project.PAW — 개인과 개인을 잇는 후원 플랫폼</title>
+
+  <!-- 공유 메타 -->
+  <meta property="og:title" content="개인↔개인, 국내 최초 기부 플랫폼 — Project.PAW"/>
+  <meta property="og:description" content="흩어진 개인 구조 모금을 한 곳에서 연결합니다. 구조자 30% 책임 · 후원금 100% 전달."/>
+  <meta property="og:image" content="img/og-paw.png"/>
+  <meta property="og:type" content="website"/>
+  <meta name="twitter:card" content="summary_large_image"/>
+
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
 
@@ -11,16 +19,16 @@
     :root{
       --ink:#111; --sub:#444; --muted:#777; --line:#eef1f5;
       --bg:#fafafa; --card:#fff; --brand:#00C896;
+      /* 화면 상단 쏠림 방지: 화면이 클수록 여백↑ */
+      --fold-offset: clamp(24px, 6vh, 96px);
     }
-
     html,body{margin:0; background:var(--bg); color:var(--ink); font-family:'Pretendard',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
-    /* 컨테이너 폭 축소: 한눈에 들어오게 */
     .container{max-width:1040px; margin:0 auto; padding:0 20px}
     section{padding:60px 0}
     h1{margin:0 0 18px; font-size:3rem; font-weight:900; letter-spacing:-.02em; line-height:1.15}
     p{margin:0; color:var(--sub); line-height:1.65}
 
-    /* 버튼 (기존 유지) */
+    /* 버튼 */
     .btn{display:inline-block; padding:12px 18px; border-radius:12px; font-weight:700; text-decoration:none; transition:.2s}
     .btn.primary{background:var(--brand); color:#fff}
     .btn.primary:hover{filter:saturate(110%) brightness(.98)}
@@ -29,7 +37,7 @@
 
     /* 우측 고정 CTA (원본 유지) */
     .cta-dock{
-      position:fixed; right:22px; top:50%; transform:translateY(-50%);
+      position:fixed; right:22px; top:58%; transform:translateY(-50%);
       display:flex; flex-direction:column; gap:10px; z-index:60;
       filter:drop-shadow(0 8px 16px rgba(0,0,0,.12));
     }
@@ -37,12 +45,9 @@
       .cta-dock{top:auto; bottom:16px; transform:none; right:16px; flex-direction:row}
     }
 
-    /* ===== 1) 히어로(한 줄 메시지 + 보조 2줄 + 룰 4칸) ===== */
-    .hero-compact{
-      background:#fff;
-      padding:88px 0 48px;
-      border-bottom:1px solid var(--line);
-    }
+    /* ===== 1) 히어로: 좌 메시지 / 우 안내 ===== */
+    .hero{background:#fff; padding:calc(88px + var(--fold-offset)) 0 48px; border-bottom:1px solid var(--line)}
+    .hero-grid{display:grid; grid-template-columns: minmax(540px,1fr) 300px; gap:24px; align-items:start}
     .subs{display:grid; gap:4px; color:var(--muted); font-size:1.02rem}
     .subs .line::before{content:"#"; margin-right:6px; color:var(--brand); font-weight:900}
     .rule-strip{margin-top:18px; display:flex; flex-wrap:wrap; gap:8px}
@@ -53,22 +58,33 @@
     }
     .rule:focus-visible{outline:2px solid var(--brand); outline-offset:2px; border-color:transparent}
 
-    /* ===== 2) 정보 카드(왜/방향 한 카드로) ===== */
-    .info-card{margin-top:16px; background:#fff; border:1px solid var(--line); border-radius:14px; padding:18px}
-    .info-row{display:grid; grid-template-columns:1fr; gap:12px}
-    .info h3{margin:0 0 6px; font-size:1.05rem; font-weight:900}
-    .divider{height:1px; background:var(--line); margin:4px 0}
+    .beta-card{
+      background:#fff; border:1px solid var(--line); border-radius:14px; padding:16px;
+    }
+    .beta-card h3{margin:0 0 8px; font-size:1.05rem; font-weight:900}
+    .beta-card p{font-size:.96rem; color:var(--sub)}
+    .beta-card p + p{margin-top:6px}
 
-    /* ===== 3) 환영 케이스(2x2 타일) ===== */
-    .case{margin-top:18px; background:#fff; border:1px solid var(--line); border-radius:14px; padding:18px}
-    .case h3{margin:0 0 8px; font-size:1.05rem; font-weight:900}
-    .case .caps{display:inline-block; padding:6px 10px; border:1px solid #e9f4ef; background:#f6fffb; color:#067b5f; border-radius:999px; font-size:.86rem; font-weight:800}
-    .case-list{display:grid; grid-template-columns:repeat(2,minmax(280px,1fr)); gap:10px; margin:10px 0 0; padding:0; list-style:none}
-    .case-list li{display:flex; gap:10px; align-items:flex-start; padding:10px 12px; border:1px dashed #f1f4f8; border-radius:10px; background:#fff}
-    .case-list li::before{content:"✓"; font-weight:900; color:var(--brand); line-height:1.2}
-    .case .hint{margin-top:10px; font-size:.92rem; color:var(--muted)}
+    /* ===== 2) 케이스 타일(1줄 고정, 모바일 2x2) ===== */
+    .case{padding:18px 0}
+    .case-head{display:flex; align-items:center; gap:10px; margin-bottom:10px}
+    .case-head h3{margin:0; font-size:1.05rem; font-weight:900}
+    .caps{display:inline-block; padding:6px 10px; border:1px solid #e9f4ef; background:#f6fffb; color:#067b5f; border-radius:999px; font-size:.86rem; font-weight:800}
+    .case-list{display:grid; grid-template-columns:repeat(4,1fr); gap:10px; margin:0; padding:0; list-style:none}
+    .case-item{
+      display:flex; align-items:center; justify-content:center; text-align:center;
+      min-height:84px; padding:10px 12px; background:#fff; border:1px dashed #f1f4f8; border-radius:10px;
+      font-weight:600; color:#222;
+      transition:.15s;
+      outline:0;
+    }
+    .case-item:hover{background:#fbfdfc}
+    .case-item:focus-visible{outline:2px solid var(--brand); outline-offset:2px; border-color:transparent}
 
-    /* ===== 4) 프로젝트 프리뷰(6개 제한 + 전체보기) ===== */
+    /* ===== 3) 섹션 디바이더 ===== */
+    .band{height:28px; background:#f3f6f8; border-top:1px solid #edf1f5; border-bottom:1px solid #edf1f5}
+
+    /* ===== 4) 프로젝트 프리뷰(6개 + 전체보기) ===== */
     .projects{padding:56px 0}
     .projects-head{display:flex; align-items:center; justify-content:space-between; margin:0 0 14px}
     .projects h2{margin:0; font-size:1.4rem; font-weight:900; letter-spacing:-.01em}
@@ -81,15 +97,19 @@
     .muted{color:var(--muted); font-size:.9rem}
 
     /* 반응형 */
+    @media (max-width:1080px){
+      .hero-grid{grid-template-columns:1fr}
+      .beta-card{order:2}
+    }
     @media (max-width:900px){
-      .case-list{grid-template-columns:1fr}
+      .case-list{grid-template-columns:1fr 1fr}
     }
     @media (max-width:720px){
-      .hero-compact{padding:64px 0 40px}
+      section{padding:48px 0}
       h1{font-size:2.3rem}
       .subs{font-size:1rem}
       .rule{font-size:.95rem; padding:10px 14px}
-      .projects{padding-bottom:72px} /* 고정 CTA와 겹침 방지 */
+      .projects{padding-bottom:72px} /* 모바일에서 고정 CTA와 겹침 방지 */
     }
   </style>
 </head>
@@ -97,56 +117,58 @@
   <!-- header include (원본 유지) -->
   <div data-include="header"></div>
 
-  <!-- 오른쪽 고정 CTA (원본 유지) -->
+  <!-- 우측 고정 CTA (원본 유지) -->
   <div class="cta-dock" aria-label="빠른 참여">
     <a href="project_list.html" class="btn primary">지금 구조자 만나보기</a>
     <a href="create.html" class="btn secondary">등록하기</a>
   </div>
 
-  <!-- ===== 1) 히어로: 메시지 + 룰 ===== -->
-  <section class="hero-compact" aria-labelledby="hero-title">
+  <!-- ===== 1) 히어로: 좌 메시지 / 우 안내 ===== -->
+  <section class="hero" aria-labelledby="hero-title">
     <div class="container">
-      <h1 id="hero-title">개인↔개인을 연결하는, 국내 최초 기부 플랫폼</h1>
-      <div class="subs" aria-label="설명">
-        <p class="line">흩어진 개인 구조 모금을 PAW에서 연결합니다.</p>
-        <p class="line">혼자 시작한 구조가 혼자 끝나지 않도록.</p>
-      </div>
-      <ul class="rule-strip" role="list" aria-label="플랫폼 원칙">
-        <li class="rule" tabindex="0">개인↔개인</li>
-        <li class="rule" tabindex="0">후원금 100% 전달</li>
-        <li class="rule" tabindex="0">구조자 30% 책임</li>
-        <li class="rule" tabindex="0">증빙 필수</li>
-      </ul>
-
-      <!-- 2) 정보 카드(왜/방향) -->
-      <div class="info-card">
-        <div class="info-row">
-          <div class="info">
-            <h3>왜 시작했나요</h3>
-            <p>개인이 해낸 구조가 단톡방에서 끝나지 않도록. 모금·증빙·소통을 <b>한 화면</b>에 모았습니다.</p>
+      <div class="hero-grid">
+        <!-- 좌측: 핵심 메시지 -->
+        <div>
+          <h1 id="hero-title">개인↔개인을 연결하는, 국내 최초 기부 플랫폼</h1>
+          <div class="subs" aria-label="설명">
+            <p class="line">흩어진 개인 구조 모금을 PAW에서 연결합니다.</p>
+            <p class="line">혼자 시작한 구조가 혼자 끝나지 않도록.</p>
           </div>
-          <div class="divider"></div>
-          <div class="info">
-            <h3>우리가 가는 방향</h3>
-            <p><b>더 많은 ‘개인 구조’</b>가 실제로 일어나게. 곧 <b>동물병원 Direct 결제</b>로 정산을 간결하게 만듭니다.</p>
-          </div>
+          <ul class="rule-strip" role="list" aria-label="플랫폼 원칙">
+            <li class="rule" tabindex="0">개인↔개인</li>
+            <li class="rule" tabindex="0">후원금 100% 전달</li>
+            <li class="rule" tabindex="0">구조자 30% 책임</li>
+            <li class="rule" tabindex="0">증빙 필수</li>
+          </ul>
         </div>
+
+        <!-- 우측: 안내 카드 -->
+        <aside class="beta-card" aria-labelledby="beta-title">
+          <h3 id="beta-title">Beta 안내</h3>
+          <p>지금은 <b>카톡방 모금</b>으로 운영합니다.</p>
+          <p><b>결제(PG)</b> 연동을 준비 중입니다.</p>
+          <p>진행 과정·증빙을 <b>투명하게 공개</b>합니다.</p>
+        </aside>
       </div>
 
-      <!-- 3) 환영하는 구조 케이스 -->
+      <!-- 2) 환영하는 구조 케이스 (1줄 4칸) -->
       <div class="case" aria-labelledby="case-title">
-        <h3 id="case-title">환영하는 구조 케이스</h3>
-        <span class="caps">필수: 구조/보호 활동으로 발생한 실제 비용</span>
+        <div class="case-head">
+          <h3 id="case-title">환영하는 구조 케이스</h3>
+          <span class="caps">필수: 실제 발생 비용</span>
+        </div>
         <ul class="case-list" role="list">
-          <li>유기동물 구조 후 병원비</li>
-          <li>보호 중 중성화 비용 <small style="color:var(--muted)">(국가지원 비대상)</small></li>
-          <li>입양 후 첫 검진비</li>
-          <li>기타 필수 구조/보호 비용</li>
+          <li class="case-item" tabindex="0" onclick="location.href='create.html'">유기동물 구조 후 병원비</li>
+          <li class="case-item" tabindex="0" onclick="location.href='create.html'">보호 중 중성화(무지원)</li>
+          <li class="case-item" tabindex="0" onclick="location.href='create.html'">입양 후 첫 검진비</li>
+          <li class="case-item" tabindex="0" onclick="location.href='create.html'">기타 필수 구조/보호비</li>
         </ul>
-        <p class="hint">등록은 간단합니다. 상황 설명과 <b>영수증/사진</b>만 준비하세요. 중복 모금은 불가하며, 진행 과정은 <b>투명하게 공개</b>됩니다.</p>
       </div>
     </div>
   </section>
+
+  <!-- 3) 섹션 디바이더 -->
+  <div class="band" aria-hidden="true"></div>
 
   <!-- ===== 4) 프로젝트 프리뷰(6개) ===== -->
   <section class="projects">
@@ -187,7 +209,7 @@
 
     async function render(){
       try {
-        /* 초화면 피로 줄이기: 6개만 */
+        // 초화면 피로 줄이기: 6개만 프리뷰
         const list = await apiListProjects({ status:'approved', limit:6 });
         if(!list.length){
           $grid.innerHTML = `
